--- a/Level_1/Level_1.vcxproj
+++ b/Level_1/Level_1.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{E026C97E-4421-4299-BDC9-3C40363CE246}</ProjectGuid>
-    <RootNamespace>DoAn21712834</RootNamespace>
+    <ProjectGuid>{2F1FBD99-5ACA-4A92-B728-E2BABB9CE795}</ProjectGuid>
+    <RootNamespace>Level1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -115,6 +115,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="SortAlg.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
