--- a/Level_1/Level_1.vcxproj.filters
+++ b/Level_1/Level_1.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Source_SortAlg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source_SortCmp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SortAlg.h">
