--- a/Level_1/Level_1.vcxproj
+++ b/Level_1/Level_1.vcxproj
@@ -115,7 +115,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="Source_SortAlg.cpp" />
     <ClCompile Include="Source_SortCmp.cpp" />
   </ItemGroup>
