--- a/Level_3/Level_3.vcxproj
+++ b/Level_3/Level_3.vcxproj
@@ -115,11 +115,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Source_LargeIntCal.cpp" />
+    <ClCompile Include="Source_LargeInt_Operator.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="LargeIntCal.h" />
     <ClInclude Include="LargeNum.h" />
     <ClInclude Include="List.h" />
+    <ClInclude Include="Queue.h" />
+    <ClInclude Include="Stack.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
