--- a/Level_2/Level_2.vcxproj
+++ b/Level_2/Level_2.vcxproj
@@ -117,11 +117,14 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Source_Cal.cpp" />
+    <ClCompile Include="Source_SortAlg.cpp" />
+    <ClCompile Include="Source_SortCmp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cal.h" />
     <ClInclude Include="List.h" />
     <ClInclude Include="Queue.h" />
+    <ClInclude Include="SortAlg.h" />
     <ClInclude Include="Stack.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
